--- a/css/QuienesSomos.css
+++ b/css/QuienesSomos.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 body {
+    background-attachment: scroll;
+    background-image: url('https://img1.wallspic.com/crops/3/0/1/3/7/173103/173103-tierra-la_astronomia-espacio-el_espacio_exterior-ambiente-1920x1080.jpg');
     font-family: 'Josefin Sans', sans-serif;
 }
 header{
@@ -26,4 +28,13 @@ a:hover{
 }
 #space{
     padding-left: 20px;
+}
+.Fondos{
+    display: flex;
+    max-width: 30%;
+    max-height: 40%;
+}
+.width{
+    width: 100%;
+    height: 100%;
 }
