--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 body {
+    background-image: url('https://static.wikia.nocookie.net/ficcion-sin-limites/images/d/d0/Spess.png/revision/latest?cb=20220117015642&path-prefix=es');
     background-attachment:scroll;
     background-size: cover;
     font-family: 'Josefin Sans', sans-serif;
@@ -12,7 +13,7 @@ header{
     justify-content: space-between;
     color: black;
     margin-right: 40px; margin-left: 20px; margin-top: 23px;
-    
+
 }
 
 a{
@@ -20,13 +21,20 @@ a{
     padding-inline: 67px; padding-top: 17px; padding-bottom: 17px;
     text-decoration: none;
     transition: 0.3s;
+   
 }
 a:hover{
     font-size: 30px;
+     background-image: linear-gradient(to left, violet, blue, skyblue, indigo,  purple, indigo );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 a#Login{
-    border-style:groove;
+    background-image: linear-gradient(to left, violet, blue, skyblue, indigo,  purple, indigo );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    border-style:dashed;
     border-radius: 50px;
 }
 a.SocialRed {
