--- a/css/QuienesSomos.css
+++ b/css/QuienesSomos.css
@@ -1,44 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
-/*body {
-    background-attachment: scroll;
-    background-image: url('https://img1.wallspic.com/crops/3/0/1/3/7/173103/173103-tierra-la_astronomia-espacio-el_espacio_exterior-ambiente-1920x1080.jpg');
-    font-family: 'Josefin Sans', sans-serif;
-}
-header{
-    font-size: 17px;
-    font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-    color: black;
-    margin-right: 40px; margin-left: 20px; margin-top: 23px;
-}
-a {
-    color: black;
-    padding-inline: 67px; padding-top: 17px; padding-bottom: 17px;
-    text-decoration: none;
-    transition: 0.3s;
-}
-a:hover{
-    font-size: 24px;
-    color: rebeccapurple;
-}
-#Login{
-    border-style: groove;
-    border-radius: 50px;
-}
-#space{
-    padding-left: 20px;
-}
-.Fondos{
-    display: flex;
-    max-width: 30%;
-    max-height: 40%;
-}
-.width{
-    width: 100%;
-    height: 100%;
-}*/
-/* Estilos para el cuerpo de la página */
 body {
     background-image: url('https://img1.wallspic.com/crops/4/9/2/5/25294/25294-pilares_de_la_creacin-3840x2160.jpg');
     font-family: Arial, sans-serif;
@@ -58,11 +18,16 @@ body {
   
   .logo {
     display: flex;
-    align-items: center;
     font-size: 24px;
-    text-transform: uppercase;
+    color: rgb(0, 0, 0);
+  }
+  #space {
     text-decoration: none;
-    color: #fff;
+    color: rgb(0, 0, 0);
+    transition: 0.3s;
+  }
+  #space:hover{
+    font-size: 35px;
   }
   
   nav {
@@ -70,9 +35,27 @@ body {
   }
   
   nav a {
-    margin-right: 20px;
+    margin-right: 40px;
     text-decoration: none;
     color: #fff;
+    padding-top: 10px;
+    transition: 0.3s;
+  }
+  nav a:hover{
+    font-size: 20px;
+  }
+  
+  #logout {
+    background-color: #ea00ff93;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+  
+  #logout:hover {
+    background-color: #cc0000;
   }
   
   /* Estilos para el título "¿Qué ofrecemos?" */
