--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,12 @@ body {
   #space {
     text-decoration: none;
     color: #fff;
+    transition: 0.3s;
   }
+  #space:hover{
+    font-size: 35px;
+  }
+  
   
   /* Estilos para los enlaces de navegación */
   nav {
@@ -35,7 +40,12 @@ body {
     text-decoration: none;
     color: #fff;
     padding-top: 10px;
+    transition: 0.3s;
   }
+  nav a:hover{
+    font-size: 20px;
+  }
+  
   
   /* Estilos para el botón de logout */
   #logout {
